--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,13 +21,14 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
 
-      # --- FIX #1: SEPARATED TERRAFORM APPLY AND OUTPUT STEPS ---
+      # STEP 1: Sirf infrastructure banayein
       - name: Terraform Apply
         run: |
           cd terraform
           terraform init
           terraform apply -auto-approve
 
+      # STEP 2: Ab saaf-suthray outputs ko env variables mein set karein
       - name: Set Terraform Outputs as Env Vars
         run: |
           cd terraform
@@ -63,8 +64,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: ${{ env.BACKEND_IP }}
-          # --- FIX #2: CORRECT USERNAME FOR UBUNTU ---
-          username: ubuntu
+          username: ubuntu # Correct username for Ubuntu
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
           script: |
             sudo aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | sudo docker login --username AWS --password-stdin ${{ steps.login-ecr.outputs.registry }}
@@ -77,8 +77,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: ${{ env.FRONTEND_IP }}
-          # --- FIX #2: CORRECT USERNAME FOR UBUNTU ---
-          username: ubuntu
+          username: ubuntu # Correct username for Ubuntu
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
           script: |
             sudo aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | sudo docker login --username AWS --password-stdin ${{ steps.login-ecr.outputs.registry }}
@@ -86,3 +85,4 @@ jobs:
             sudo docker rm frontend-container || true
             sudo docker pull ${{ steps.login-ecr.outputs.registry }}/weather-app-frontend:${{ github.sha }}
             sudo docker run -d --name frontend-container -p 5000:5000 -e BACKEND_API_URL="http://${{ env.ALB_DNS }}/api/weather" ${{ steps.login-ecr.outputs.registry }}/weather-app-frontend:${{ github.sha }}
+
