--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,11 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
 
-      # STEP 1: Sirf infrastructure banayein
+      # STEP 1: Sirf infrastructure banayein ya update karein
       - name: Terraform Apply
         run: |
           cd terraform
+          # Init ab S3 backend se connect hoga
           terraform init
           terraform apply -auto-approve
 
@@ -64,7 +65,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: ${{ env.BACKEND_IP }}
-          username: ubuntu # Correct username for Ubuntu
+          username: ubuntu
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
           script: |
             sudo aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | sudo docker login --username AWS --password-stdin ${{ steps.login-ecr.outputs.registry }}
@@ -77,7 +78,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: ${{ env.FRONTEND_IP }}
-          username: ubuntu # Correct username for Ubuntu
+          username: ubuntu
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
           script: |
             sudo aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | sudo docker login --username AWS --password-stdin ${{ steps.login-ecr.outputs.registry }}
