--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,14 +27,15 @@ jobs:
           terraform init
           terraform apply -auto-approve
 
-      # --- THE REAL & FINAL FIX: Using step outputs (the modern way) ---
+      # --- THE REAL & FINAL FIX: Forcefully cleaning the output ---
       - name: Set Terraform Outputs
-        id: tf_outputs  # Step ko ek ID de rahe hain
+        id: tf_outputs
         run: |
           cd terraform
-          echo "frontend_ip=$(terraform output -raw frontend_instance_public_ip)" >> $GITHUB_OUTPUT
-          echo "backend_ip=$(terraform output -raw backend_instance_public_ip)" >> $GITHUB_OUTPUT
-          echo "alb_dns=$(terraform output -raw alb_dns_name)" >> $GITHUB_OUTPUT
+          # Pipe the output to `cut` to remove any extra debug text from the runner
+          echo "frontend_ip=$(terraform output -raw frontend_instance_public_ip | cut -d':' -f1)" >> $GITHUB_OUTPUT
+          echo "backend_ip=$(terraform output -raw backend_instance_public_ip | cut -d':' -f1)" >> $GITHUB_OUTPUT
+          echo "alb_dns=$(terraform output -raw alb_dns_name | cut -d':' -f1)" >> $GITHUB_OUTPUT
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -63,7 +64,6 @@ jobs:
       - name: Deploy Backend to EC2
         uses: appleboy/ssh-action@master
         with:
-          # Naye tareeqe se output parhein
           host: ${{ steps.tf_outputs.outputs.backend_ip }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
@@ -77,7 +77,6 @@ jobs:
       - name: Deploy Frontend to EC2
         uses: appleboy/ssh-action@master
         with:
-          # Naye tareeqe se output parhein
           host: ${{ steps.tf_outputs.outputs.frontend_ip }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
@@ -87,3 +86,4 @@ jobs:
             sudo docker rm frontend-container || true
             sudo docker pull ${{ steps.login-ecr.outputs.registry }}/weather-app-frontend:${{ github.sha }}
             sudo docker run -d --name frontend-container -p 5000:5000 -e BACKEND_API_URL="http://${{ steps.tf_outputs.outputs.alb_dns }}/api/weather" ${{ steps.login-ecr.outputs.registry }}/weather-app-frontend:${{ github.sha }}
+
